# SandboxXfwm4

./: configure.ac.in
settings-dialogs/: Makefile.am  workspace-settings.c  xfwm4-workspace-dialog.glade  xfwm4-workspace-security.glade
src/: Makefile.am  client.c  client.h  display.c  display.h  events.c  frame.c  frame.h  hints.c  hints.h  main.c  moveresize.c  mypixmap.c  mypixmap.h  netwm.c  parserc.c  parserc.h  placement.c  screen.c  screen.h  settings.c  settings.h  workspaces.c  workspaces.h
themes/default/: Makefile.am  bottom-left-protected-active.xpm  bottom-left-protected-inactive.xpm  bottom-left-untrusted-active.xpm  bottom-left-untrusted-inactive.xpm  bottom-protected-active.xpm  bottom-protected-inactive.xpm  bottom-right-protected-active.xpm  bottom-right-protected-inactive.xpm  bottom-right-untrusted-active.xpm  bottom-right-untrusted-inactive.xpm  bottom-untrusted-active.xpm  bottom-untrusted-inactive.xpm  close-protected-inactive.xpm  close-protected-prelight.xpm  close-protected-pressed.xpm  close-untrusted-active.xpm  close-untrusted-inactive.xpm  close-untrusted-pressed.xpm  hide-protected-active.xpm  hide-protected-inactive.xpm  hide-protected-pressed.xpm  hide-untrusted-active.xpm  hide-untrusted-inactive.xpm  hide-untrusted-pressed.xpm  left-protected-active.xpm  left-protected-inactive.xpm  left-untrusted-active.xpm  left-untrusted-inactive.xpm  maximize-protected-inactive.xpm  maximize-protected-prelight.xpm  maximize-protected-pressed.xpm  maximize-toggled-protected-inactive.xpm  maximize-toggled-protected-prelight.xpm  maximize-toggled-protected-pressed.xpm  maximize-toggled-untrusted-inactive.xpm  maximize-toggled-untrusted-prelight.xpm  maximize-toggled-untrusted-pressed.xpm  maximize-untrusted-active.xpm  maximize-untrusted-inactive.xpm  (+47 more)
